k8s-mediaserver/radarr/radarr_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    meta.helm.sh/release-name: k8smediaserver-sample
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2023-07-16T03:07:34Z"
  generation: 4
  labels:
    app.kubernetes.io/instance: k8smediaserver-sample
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-mediaserver
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: k8s-mediaserver-0.7.0
  name: radarr
  namespace: default
  ownerReferences:
  - apiVersion: charts.kubealex.com/v1
    blockOwnerDeletion: true
    controller: true
    kind: K8SMediaserver
    name: k8smediaserver-sample
    uid: f52bdd6a-8840-4acc-9309-f004c4e68b14
  resourceVersion: "1154017"
  uid: e34c6c0d-d485-44c2-bc6a-746966df76aa
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8smediaserver-sample
      app.kubernetes.io/name: k8s-mediaserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2023-07-17T03:08:53-04:00"
      creationTimestamp: null
      labels:
        app: radarr
        app.kubernetes.io/instance: k8smediaserver-sample
        app.kubernetes.io/name: k8s-mediaserver
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: radarr-config
        image: docker.io/linuxserver/radarr:latest
        imagePullPolicy: Always
        name: k8s-mediaserver
        ports:
        - containerPort: 7878
          name: radarr-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 7878
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: mediaserver-volume
          subPath: config/radarr
        - mountPath: /downloads
          name: mediaserver-volume
          subPath: downloads
        - mountPath: /movies
          name: mediaserver-volume
          subPath: media/movies
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mediaserver-volume
        persistentVolumeClaim:
          claimName: mediaserver-pvc-redux
      - configMap:
          defaultMode: 493
          name: init-radarr-cm
        name: init-files-radarr
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-07-17T07:13:05Z"
    lastUpdateTime: "2023-07-17T07:13:05Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-07-17T07:12:13Z"
    lastUpdateTime: "2023-07-17T07:13:05Z"
    message: ReplicaSet "radarr-769488c7b8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
