k8s-mediaserver/radarr/radarr_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: k8smediaserver-sample
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2023-07-16T03:07:34Z"
  labels:
    app.kubernetes.io/instance: k8smediaserver-sample
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-mediaserver
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: k8s-mediaserver-0.7.0
  name: radarr
  namespace: default
  ownerReferences:
  - apiVersion: charts.kubealex.com/v1
    blockOwnerDeletion: true
    controller: true
    kind: K8SMediaserver
    name: k8smediaserver-sample
    uid: f52bdd6a-8840-4acc-9309-f004c4e68b14
  resourceVersion: "486537"
  uid: 4ffb0e34-5976-4cdf-9a86-5851587f51cb
spec:
  clusterIP: 10.43.119.185
  clusterIPs:
  - 10.43.119.185
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: radarr-port
    port: 7878
    protocol: TCP
    targetPort: 7878
  selector:
    app: radarr
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
