k8s-mediaserver/radarr/radarr_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: 
    - websecure
  routes:
    - match: Host(`radarr.local.izroll.dev`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: local-izroll-dev-tls
